samples/_failures_safe/1761366095_37d787_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70a25e63.c: In function ‘main’:
./samples/SAFE/__tmp_70a25e63.c:186:11: error: expected ‘;’ at end of input
  186 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_70a25e63.c:186:5: error: expected declaration or statement at end of input
  186 |     printf
      |     ^~~~~~
